k8s/jenkins/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins               # Deployment/Pod 쪽도 동일 라벨이어야 함
  ports:
    - name: http                # ServiceMonitor에서 이 포트 이름을 참조
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
  type: ClusterIP               # NodePort/LB여도 상관 없음
